# tm_server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONCISE_NOTATION_FORMAT.md  GAMEPLAN.md  IMPLEMENTATION_PLAN.md  MULTIPLAYER_TM_SPEC.md  MULTIPLAYER_TODO_LATER.md  NOTES.md  PHASE_4_PROGRESS.md  PLAN.md  README.md  SNAPSHOT_FORMAT.md  bga_log.txt  lint_errors.txt  lint_report.txt  lint_report_2.txt  lint_report_3.txt  lint_report_4.txt  lint_report_5.txt  package-lock.json
client/: Caddyfile  README.md  (+13 more)
server/: .bazelrc  .golangci.yml  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-server  bazel-testlogs  deps.bzl  go.mod  go.sum  logs.txt  nixpacks.toml  railway.json
server/cmd/az_buffer/: BUILD.bazel  main.go
server/cmd/az_checkpoint_vocab/: BUILD.bazel  az_checkpoint_vocab.py
server/cmd/az_eval/: BUILD.bazel  main.go
server/cmd/az_export/: BUILD.bazel  main.go
server/cmd/az_infer_torch/: BUILD.bazel  az_infer_torch.py
server/cmd/az_loop/: BUILD.bazel  main.go
server/cmd/az_replay_seeds/: BUILD.bazel  main.go
server/cmd/az_selfplay/: BUILD.bazel  main.go
server/cmd/az_train/: BUILD.bazel  main.go
server/cmd/az_train_torch/: BUILD.bazel  az_train_torch.py
server/cmd/bga_test/: BUILD.bazel  main.go  main_test.go
server/cmd/convert_to_concise/: BUILD.bazel  main.go
server/cmd/replay_validator/: BUILD.bazel  main.go
server/cmd/server/: BUILD.bazel  main.go
server/cmd/verify_faction/: main.go
server/internal/api/: BUILD.bazel  ai.go  ai_test.go  replay.go
server/internal/az/actions/: BUILD.bazel  actions.go  actions_test.go
server/internal/az/arena/: BUILD.bazel  arena.go  arena_test.go
server/internal/az/buffer/: BUILD.bazel  buffer.go  buffer_test.go
server/internal/az/dataset/: BUILD.bazel  dataset.go  dataset_test.go
server/internal/az/env/: BUILD.bazel  env.go  env_test.go
server/internal/az/mcts/: BUILD.bazel  mcts.go  mcts_test.go
server/internal/az/model/: BUILD.bazel  async_batch.go  async_batch_test.go  http.go  http_test.go  loader.go  model.go  table.go
server/internal/az/selfplay/: BUILD.bazel  selfplay.go  selfplay_test.go
server/internal/az/stats/: BUILD.bazel  final_score.go  r1_build.go  r1_build_test.go
server/internal/az/train/: BUILD.bazel  train.go  train_test.go
server/internal/game/: BUILD.bazel  action_auction.go  action_chash_track.go  action_conversion.go  action_conversion_test.go  action_cult_spade.go  action_cultists_cult_selection.go  action_darklings_ordination.go  action_discard_pending_spade.go  action_discard_pending_spade_test.go  action_engineers_bridge.go  action_engineers_bridge_test.go  action_goblins_cult_track.go  action_goblins_treasure.go  action_halflings_spades.go  action_halflings_spades_test.go  action_player_options.go  action_power_leech.go  action_scoring_test.go  action_select_archivists_bonus_card.go  action_select_djinni_starting_cult.go  action_select_faction.go  action_select_faction_test.go  action_select_favor_tile.go  action_select_favor_tile_test.go  action_select_riverwalkers_priest.go  action_select_town_cult_top.go  action_select_town_cult_top_test.go  action_select_town_tile.go  action_select_treasurers_deposit.go  action_setup_bonus_card.go  action_setup_dwelling.go  action_shipping_digging_vp_test.go  action_transform_build_test.go  action_upgrade_building_test.go  action_upgrade_test.go  action_wisps_stronghold_dwelling.go  actions.go  alchemists_test.go  auction.go  (+76 more)
server/internal/game/board/: BUILD.bazel  hex.go  map.go  map_bridge_test.go  map_indirect_test.go  maps.go  maps_test.go  terraform_test.go  terrain.go
server/internal/game/factions/: BUILD.bazel  FACTION_GUIDE.md  alchemists.go  alchemists_test.go  auren.go  auren_test.go  chaos_magicians.go  chaos_magicians_test.go  cultists.go  cultists_test.go  darklings.go  darklings_test.go  dwarves.go  dwarves_test.go  engineers.go  engineers_test.go  faction.go  faction_test.go  fakirs.go  fakirs_test.go  fan_factions.go  fan_factions_test.go  fire_ice_factions.go  fire_ice_factions_test.go  giants.go  giants_test.go  halflings.go  halflings_test.go  mermaids.go  mermaids_test.go  nomads.go  nomads_test.go  registry.go  swarmlings.go  swarmlings_test.go  witches.go  witches_test.go
server/internal/lobby/: BUILD.bazel  lobby.go  lobby_test.go
server/internal/models/: BUILD.bazel  building.go  faction.go  game.go  map.go  resource_type.go  resources.go  terrain.go  town.go
server/internal/notation/: BUILD.bazel  bga_parser.go  bga_parser_acts_test.go  bga_parser_conversion_test.go  bga_parser_cultist_test.go  bga_parser_special_action_test.go  bga_parser_test.go  concise_log.txt  coordinates.go  coordinates_test.go  duplicate_leech_test.go  generator.go  generator_leech_placement_test.go  html_parser.go  log_power_action_test.go  mapping.go  models.go  notation_test.go  parser.go  parser_test.go  regex_definitions.go  round_trip_test.go  snellman_parser.go  snellman_parser_test.go  snellman_to_concise.go  snellman_to_concise_test.go  types.go  types_test.go
server/internal/replay/: BUILD.bazel  action_converter.go  compound_action.go  compound_integration_test.go  compound_parser.go  compound_parser_test.go  convert_upgrade_test.go  coordinates.go  cult_spade_test.go  darklings_dig_test.go  debug_action_state_test.go  full_snellman_replay_test.go  game_setup.go  manager.go  manager_import_test.go  manager_test.go  notation.go  parser.go  parser_test.go  simulator.go  simulator_cleanup_timing_test.go  simulator_initial_bonus_test.go  simulator_leech_tolerance_test.go  simulator_treasurers_test.go  snapshot_generator.go  snapshot_parser.go  snapshot_test.go  snellman_batch_replay_test.go  snellman_batch_s60_63_replay_test.go  snellman_batch_s64_66_replay_test.go  snellman_ledger_resources_test.go  validator.go
server/internal/websocket/: BUILD.bazel  bot.go  bot_test.go  client.go  e2e_integration_test.go  golden_snellman_e2e_test.go  handler.go  hub.go  hub_test.go
server/modal/: README.md  az_inference.py
server/tools/: client_build_test.sh  client_playwright_test.sh
(+238 files in other folders)
