load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/lukev/tm_server
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

sh_test(
    name = "client_playwright_test",
    srcs = ["tools/client_playwright_test.sh"],
    args = ["$(location //cmd/server:server)"],
    data = ["//cmd/server:server"],
    env = {
        "TM_REPO_ROOT": "/Users/kevin/projects/tm_server",
    },
    size = "enormous",
    timeout = "long",
)

sh_test(
    name = "client_build_test",
    srcs = ["tools/client_build_test.sh"],
    env = {
        "TM_REPO_ROOT": "/Users/kevin/projects/tm_server",
    },
    size = "large",
    timeout = "moderate",
)
