load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "az_eval",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/az_eval",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/az/arena",
        "//internal/az/mcts",
        "//internal/az/model",
    ],
)
