load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "az_loop",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/az_loop",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/az/arena",
        "//internal/az/dataset",
        "//internal/az/mcts",
        "//internal/az/model",
        "//internal/az/selfplay",
        "//internal/az/train",
    ],
)
