load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "az_selfplay",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/az_selfplay",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/az/env",
        "//internal/az/mcts",
        "//internal/az/model",
        "//internal/az/selfplay",
    ],
)
