load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bga_test_lib",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/bga_test",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/game/factions",
        "//internal/models",
        "//internal/notation",
        "//internal/replay",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "bga_test",
    embed = [":bga_test_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bga_test_test",
    srcs = ["main_test.go"],
    embed = [":bga_test_lib"],
    deps = ["//internal/game/board"],
)
