load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "replay_validator_lib",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/replay_validator",
    visibility = ["//visibility:private"],
    deps = ["//internal/replay"],
)

go_binary(
    name = "replay_validator",
    embed = [":replay_validator_lib"],
    visibility = ["//visibility:public"],
)
