load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/lukev/tm_server/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/game:game",
        "//internal/lobby:lobby",
        "//internal/websocket",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
