load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "ai.go",
        "replay.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/api",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/az/actions",
        "//internal/az/env",
        "//internal/az/mcts",
        "//internal/az/model",
        "//internal/game",
        "//internal/replay",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "api_test",
    srcs = ["ai_test.go"],
    embed = [":api"],
    deps = [
        "//internal/az/env",
        "//internal/game",
        "@com_github_gorilla_mux//:mux",
    ],
)
