load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "game",
    srcs = [
        "action_cult_spade.go",
        "action_power_leech.go",
        "actions.go",
        "auction.go",
        "bonus_cards.go",
        "cleanup.go",
        "cult.go",
        "favor.go",
        "final_scoring.go",
        "hex.go",
        "income.go",
        "manager.go",
        "map.go",
        "power.go",
        "power_actions.go",
        "resources.go",
        "scoring_tiles.go",
        "special_actions.go",
        "state.go",
        "terraform.go",
        "terrain_layout.go",
        "town.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/game",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/game/factions:factions",
        "//internal/models:models",
    ],
)

load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "game_test",
    srcs = [
        # Faction integration tests (consolidated):
        # - Halflings: Spade VP bonuses (4 tests)
        # - Swarmlings: Upgrade scoring (3 tests)
        # - Alchemists: VP/Coin conversion, power per spade (11 tests)
        # - Cultists: Power leech bonuses (4 tests)
        # - Giants: Transform special action (3 tests)
        # - Engineers: VP per bridge on pass, bridge+town formation (4 tests)
        # - Witches: Town founding bonus, Witches' Ride (3 tests)
        # - Fakirs: Carpet flight (basic, after stronghold, power action, no shipping) (4 tests)
        # - Dwarves: Tunneling (basic, after stronghold, power action, no shipping) (4 tests)
        # - Darklings: Priest terraform, VP bonus, priest ordination w/ 7-priest limit, cannot upgrade digging, power action (6 tests)
        # - 7-Priest Limit: Income capping, power action validation (2 tests)
        # Total: 48 faction integration tests
        "faction_integration_test.go",
        # Action tests
        "action_scoring_test.go",
        "action_transform_build_test.go",
        "action_upgrade_building_test.go",
        "auction_test.go",
        "bonus_card_income_test.go",
        "bonus_card_scoring_test.go",
        "bonus_card_special_actions_test.go",
        "cleanup_test.go",
        "cult_test.go",
        "favor_test.go",
        "final_scoring_test.go",
        "income_test.go",
        "map_bridge_shipping_test.go",
        "map_indirect_base_test.go",
        "power_actions_test.go",  # Includes 5 bridge geometry validation tests
        "power_test.go",
        "resources_test.go",
        "scoring_tiles_test.go",
        "special_actions_test.go",
        "terraform_test.go",
        "town_test.go",
        "turn_order_test.go",
    ],
    embed = [":game"],
    deps = [
        "//internal/game/factions:factions",
        "//internal/models:models",
    ],
)
