load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "game",
    srcs = [
        "action_cult_spade.go",
        "action_cultists_cult_selection.go",
        "action_darklings_ordination.go",
        "action_engineers_bridge.go",
        "action_halflings_spades.go",
        "action_power_leech.go",
        "action_select_faction.go",
        "action_select_favor_tile.go",
        "action_select_town_cult_top.go",
        "action_select_town_tile.go",
        "action_setup_dwelling.go",
        "action_setup_bonus_card.go",
        "action_conversion.go",
        "action_auction.go",
        "action_discard_pending_spade.go",
        "actions.go",
        "auction.go",
        "bonus_cards.go",
        "cleanup.go",
        "cult.go",
        "errors.go",
        "faction_spade_bonuses.go",
        "favor.go",
        "final_scoring.go",
        "income.go",
        "manager.go",
        "power.go",
        "power_actions.go",
        "resources.go",
        "scoring_tiles.go",
        "special_actions.go",
        "state.go",
        "town.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/game",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/game/board",
        "//internal/game/factions:factions",
        "//internal/models:models",
    ],
)

load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "game_test",
    srcs = [
        "faction_integration_test.go",
        "action_scoring_test.go",
        "action_select_favor_tile_test.go",
        "action_select_faction_test.go",
        "action_select_town_cult_top_test.go",
        "action_discard_pending_spade_test.go",
        "action_shipping_digging_vp_test.go",
        "action_engineers_bridge_test.go",
        "action_transform_build_test.go",
        "action_upgrade_building_test.go",
        "auction_test.go",
        "auction_flow_test.go",
        "bonus_card_income_test.go",
        "bonus_card_scoring_test.go",
        "bonus_card_special_actions_test.go",
        "cleanup_test.go",
        "cult_test.go",
        "favor_test.go",
        "final_scoring_test.go",
        "income_test.go",
        "manager_revision_test.go",
        "map_indirect_base_test.go",
        "power_actions_test.go",
        "power_test.go",
        "resources_test.go",
        "scoring_tiles_test.go",
        "special_actions_test.go",
        "setup_flow_test.go",
        "town_test.go",
        "turn_order_test.go",
    ],
    embed = [":game"],
    deps = [
        "//internal/game/board",
        "//internal/game/factions:factions",
        "//internal/models:models",
    ],
)
