load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lobby",
    srcs = [
        "lobby.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/lobby",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/game/board"],
)

go_test(
    name = "lobby_test",
    srcs = ["lobby_test.go"],
    embed = [":lobby"],
    deps = [
        "//internal/game/board",
        "//internal/models:models",
    ],
)
