load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "notation",
    srcs = [
        "bga_parser.go",
        "coordinates.go",
        "generator.go",
        "html_parser.go",
        "mapping.go",
        "models.go",
        "parser.go",
        "regex_definitions.go",
        "snellman_parser.go",
        "snellman_to_concise.go",
        "types.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/notation",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/game/factions",
        "//internal/models",
        "@com_github_puerkitobio_goquery//:goquery",
    ],
)

go_test(
    name = "notation_test",
    srcs = [
        "bga_parser_test.go",
        "bga_parser_conversion_test.go",
        "bga_parser_cultist_test.go",
        "bga_parser_acts_test.go",
        "bga_parser_special_action_test.go",
        "duplicate_leech_test.go",
        "generator_leech_placement_test.go",
        "parser_test.go",
        "snellman_parser_test.go",
        "snellman_to_concise_test.go",
    ],
    embed = [":notation"],
    deps = [
        "//internal/game",
        "//internal/models",
    ],
)
