load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "replay",
    srcs = [
        "action_converter.go",
        "compound_action.go",
        "compound_parser.go",
        "coordinates.go",
        "game_setup.go",
        "notation.go",
        "parser.go",
        "validator.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/replay",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game",
        "//internal/game/factions",
        "//internal/models",
    ],
)

go_test(
    name = "replay_test",
    srcs = [
        "compound_integration_test.go",
        "compound_parser_test.go",
        "convert_upgrade_test.go",
        "cult_spade_test.go",
        "parser_test.go",
    ],
    embed = [":replay"],
    deps = [
        "//internal/game",
        "//internal/game/factions",
        "//internal/models",
    ],
)
