load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "replay",
    srcs = [
        "action_converter.go",
        "compound_action.go",
        "compound_parser.go",
        "coordinates.go",
        "game_setup.go",
        "manager.go",
        "notation.go",
        "parser.go",
        "simulator.go",
        "snapshot_generator.go",
        "snapshot_parser.go",
        "validator.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/replay",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/game/factions",
        "//internal/models",
        "//internal/notation",
    ],
)

go_test(
    name = "replay_test",
    srcs = [
        "compound_integration_test.go",
        "compound_parser_test.go",
        "convert_upgrade_test.go",
        "cult_spade_test.go",
        "darklings_dig_test.go",
        "full_snellman_replay_test.go",
        "manager_import_test.go",
        "manager_test.go",
        "parser_test.go",
        "snellman_batch_replay_test.go",
        "snapshot_test.go",
        "simulator_leech_tolerance_test.go",
    ],
    data = [
        "testdata/s69_full_game_concise.txt",
    ] + glob([
        "testdata/snellman_batch/*.txt",
        "testdata/snellman_batch/manifest.json",
    ]),
    embed = [":replay"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/game/factions",
        "//internal/models",
        "//internal/notation",
    ],
)
