load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "websocket",
    srcs = [
        "client.go",
        "hub.go",
        "handler.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/websocket",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/lobby",
        "//internal/models:models",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_test(
    name = "websocket_test",
    srcs = [
        "e2e_integration_test.go",
        "hub_test.go",
    ],
    embed = [":websocket"],
    deps = [
        "//internal/game",
        "//internal/lobby",
        "//internal/models:models",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
