load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "async_batch.go",
        "http.go",
        "loader.go",
        "model.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/az/model",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/az/actions",
        "//internal/az/env",
    ],
)

go_test(
    name = "model_test",
    srcs = [
        "async_batch_test.go",
        "http_test.go",
    ],
    embed = [":model"],
    deps = [
        "//internal/az/env",
    ],
)
