load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stats",
    srcs = [
        "final_score.go",
        "r1_build.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/az/stats",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game",
        "//internal/models",
    ],
)

go_test(
    name = "stats_test",
    srcs = ["r1_build_test.go"],
    embed = [":stats"],
    deps = [
        "//internal/game",
        "//internal/game/board",
        "//internal/game/factions",
        "//internal/models",
    ],
)
