load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "board",
    srcs = [
        "hex.go",
        "map.go",
        "terrain.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/game/board",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/game/factions",
        "//internal/models",
    ],
)

go_test(
    name = "board_test",
    srcs = [
        "map_bridge_test.go",
        "map_indirect_test.go",
        "terraform_test.go",
    ],
    embed = [":board"],
    deps = [
        "//internal/models",
    ],
)
