load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "factions",
    srcs = [
        "alchemists.go",
        "auren.go",
        "cultists.go",
        "darklings.go",
        "faction.go",
        "halflings.go",
        "registry.go",
        "witches.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/game/factions",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/models:models",
    ],
)

go_test(
    name = "factions_test",
    srcs = [
        "alchemists_test.go",
        "auren_test.go",
        "cultists_test.go",
        "darklings_test.go",
        "faction_test.go",
        "halflings_test.go",
        "witches_test.go",
    ],
    embed = [":factions"],
    deps = [
        "//internal/models:models",
    ],
)
