load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "factions",
    srcs = [
        "alchemists.go",
        "auren.go",
        "chaos_magicians.go",
        "cultists.go",
        "darklings.go",
        "dwarves.go",
        "engineers.go",
        "fakirs.go",
        "faction.go",
        "giants.go",
        "halflings.go",
        "mermaids.go",
        "nomads.go",
        "registry.go",
        "swarmlings.go",
        "witches.go",
    ],
    importpath = "github.com/lukev/tm_server/internal/game/factions",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/models:models",
    ],
)

go_test(
    name = "factions_test",
    srcs = [
        "alchemists_test.go",
        "auren_test.go",
        "chaos_magicians_test.go",
        "cultists_test.go",
        "darklings_test.go",
        "dwarves_test.go",
        "engineers_test.go",
        "fakirs_test.go",
        "faction_test.go",
        "giants_test.go",
        "halflings_test.go",
        "mermaids_test.go",
        "nomads_test.go",
        "swarmlings_test.go",
        "witches_test.go",
    ],
    embed = [":factions"],
    deps = [
        "//internal/models:models",
    ],
)
